<resources>
    <string name="app_name">A.P.E.</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_materias">Materias</string>
    <string name="menu_examenes">Exámenes</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_planificador">Planificador de horarios</string>
    <string name="menu_metricas">Métricas</string>
    <string name="menu_archivos">Archivos</string>
    <string name="eventos_del_dia">Eventos del día:</string>
    <string name="recordatorios">Recordatorios:</string>
    <string name="title_activity_iu_agenda">Agenda</string>
    <string name="menu_agregar">Agregar</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_información">Obtener datos</string>
    <string name="menu_abrir">Abrir archivo</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_buscar">Archivos relacionados</string>
    <string name="menu_consejos">Consejos para el estudio</string>
    <string name="resultado">Resultado:</string>
    <string name="nombre">Nombre:</string>
    <string name="fecha">Fecha (aaaa-mm-dd):</string>
    <string name="provincia">Provincia:</string>
    <string name="localidad">Localidad:</string>
    <string name="nacimiento">Fecha de Nacimiento (aaaa-mm-dd):</string>
    <string name="carrera">Carrera:</string>
    <string name="horario_inicio">Horario de inicio:</string>
    <string name="horario_fin">Horario de finalización:</string>
    <string name="descripcion">Descripción:</string>
    <string name="agregar_evento">Agregar evento:</string>
    <string name="agregar_plan_estudio">Agregar un plan de estudio:</string>
    <string name="modificar_evento">Modificar evento:</string>
    <string name="modificar_plan_estudio">Modificar plan:</string>
    <string name="nota_evento_semanal">¿Es un evento semanal?</string>
    <string name="nota_recordatorio">¿Establecer un recoratorio?</string>
    <string name="aceptar">Aceptar</string>
    <string name="reintentar">Reintentar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar datos</string>
    <string name="agregar_plan">Agregar plan de estudio</string>
    <string name="iniciar">Iniciar</string>
    <string name="completado">Completado</string>
    <string name="title_activity_iu_materias">Menú de materias</string>
    <string name="title_activity_iu_planificador">Planificador</string>
    <string name="title_activity_iu_metricas">Menú de métricas</string>
    <string name="title_activity_iu_archivos">Menú de archivos</string>
    <string name="title_activity_iu_configuracion">Configuración</string>
    <string name="title_activity_iu_revisar_plan">Planificación de estudio</string>
    <string name="listado_materias">Listado de materias registradas:</string>
    <string name="listado_archivos">Listado de archivos registrados:</string>
    <string name="agregar_materia">Agregar materia:</string>
    <string name="modificar_materia">Modificar materia:</string>
    <string name="tipo">Tipo:</string>
    <string name="dificultad">Dificultad:</string>
    <string name="horarios">Horarios:</string>
    <string name="activa">Activa</string>
    <string name="no_activa">No activa</string>
    <string name="estado">Estado:</string>
    <string name="nombre_archivo">Nombre del archivo:</string>
    <string name="temas_archivo">Palabras claves del archivo:</string>
    <string name="modificar_horarios">¿Modificar los horarios?</string>
    <string name="informacion_materia">Información sobre la materia:</string>
    <string name="informacion_examen">Información sobre el examen:</string>
    <string name="title_activity_iu__examenes">Menú de exámenes</string>
    <string name="listado_examenes">Listado de exámenes registrados:</string>
    <string name="listado_examenes_completados">Listado de exámenes completados:</string>
    <string name="listado_planificaciones_finalizadas">Listado de planificaciones finalizadas:</string>
    <string name="agregar_examen">Agregar examen:</string>
    <string name="agregar_archivo">Agregar archivo:</string>
    <string name="modificar_examen">Modificar examen</string>
    <string name="materia">Materia:</string>
    <string name="temas">Temas:</string>
    <string name="mensaje_entrada_planificador">Elija el examen sobre el cual planificar:</string>
    <string name="menu_iniciar">Iniciar planificador</string>
    <string name="listado_metricas">Listado de métricas:</string>
    <string name="promedio_especifico">Promedio específico</string>
    <string name="datos_por_examen">Ver información por examen</string>
    <string name="datos_por_materia">Ver información por materia</string>
    <string name="seleccion_materias">Seleccione las materias a incluir en el cálculo:</string>
    <string name="calcular_promedio">Calcular promedio</string>
    <string name="informacion_ayuda">Información de ayuda:</string>
    <string name="aviso_actualizacion_actividades">Las siguientes actividades necesitan que actualice sus registros:</string>
    <string name="modificar_archivo">Modificar registro de archivo:</string>
    <string name="datos_archivo">Datos del archivo:</string>
    <string name="fecha_creacion">Fecha de creación:</string>
    <string name="direccion">Dirección:</string>
    <string name="dia">Día:</string>
    <string name="configuracion">Configuración:</string>
    <string name="ingresar">Ingresar con Google\t</string>
    <string name="modificar_cantidad_horas">Modificar el numero de horas utilizadas</string>
    <string name="formato_pista_fecha">aaaa-mm-dd</string>
    <string name="nombre_usuario">Nombre del usuario</string>
    <string name="email_usuario">Email del usuario</string>
    <string name="contrasena">Contraseña (max. 12 caracteres)</string>
    <string name="registro">Registrarse</string>
    <string name="opciones_extra">Otras Opciones</string>
    <string name="borrar_agenda">Limpiar Agenda</string>
    <string name="borrar_eventos_antiguos">Eliminar eventos viejos</string>
    <string name="mensaje_buscar_clave_archivo">Buscar archivos por palabras claves</string>
    <string name="mensaje_olvido_contraseña">¿Olvido su contraseña?</string>
    <string name="mensaje_eliminar">¿Está seguro de que desea eliminarlo?</string>
    <string name="mensaje_archivo_guardado">Archivo guardado.</string>
    <string name="repetir_contrasena">Repita la contraseña (max. 12 caracteres)</string>
    <string name="mensaje_establecer_contraseña">¿Desea cambiar su contraseña?</string>
    <string name="mensaje_confirmacion_borrado_agenda">¿Desea borrar todos los eventos registrados?</string>
    <string name="mensaje_confirmacion_borrado_eventos_viejos">¿Desea borrar todos los eventos anteriores al día de hoy?</string>
    <string name="mensaje_guardado_existoso">Guardado con éxito.</string>
    <string name="elimincacion_exitosa">Eliminación de datos exitosa.</string>
    <string name="mensaje_modificacion_exitosa">Se actualizaron los datos.</string>
    <string name="mensaje_modificar_temas">¿Desea cambiar los temas ingresados para el examen?</string>
    <string name="mensaje_modificar_archivo">¿Desea modificar los datos del archivo seleccionado?</string>
    <string name="mensaje_registro_exitoso">Registro exitoso.</string>
    <string name="mensaje_seleccion_plan_estudio">¿Que desea hacer?</string>
    <string name="mensaje_conexion_fallida">No se ha podido concretar la conexion de internet, ¿Què desea hacer?</string>
    <string name="estado_examen_en_espera">En espera</string>
    <string name="crear_planificacion">Iniciar una planificación de estudios</string>
    <string name="revisar_planificacion">Revisar planificaciones activas</string>
    <string name="revisar_planificaciones_antiguas">Revisar planificaciones antiguas</string>
    <string name="mensaje_verificar_planes">Por favor, marque aquellos planes que ha cumplido:</string>
    <string name="mensaje_examenes_hoy_nota">Tiene un examen asignado para el día de hoy, cuando tenga el resultado recuerde regístralo.</string>
    <string name="mensaje_plan_de_estudio_hoy">Tiene un plan de estudio registrado para el día de hoy, recuerde registrar si cumplio con el mismo.</string>
    <string name="contenido_nota">Por favor, escriba su anotación:</string>
    <string name="audio_pausa">En pausa...</string>
    <string name="audio_play">Escuchando audio...</string>
    <string name="audio_grabacion">Grabando audio...</string>
    <string name="audio_grabacion_detenida">Grabación detenida...</string>
    <string name="error_login">Nombre de usuario o contraseña incorrectos.</string>
    <string name="error_no_email_ingresado">El email ingresado no tiene el formato correcto.</string>
    <string name="error_email_no_gmail">Esta aplicación utiliza Google Calendar, por favor ingrese una cuenta de Gmail.</string>
    <string name="error_fallo_ventana">Se produjo un error al cargar la ventana, intente mas tarde.</string>
    <string name="error_contrasena_corta">La contraseña debe tener como minimo 6 caracteres.</string>
    <string name="error_objeto_no_seleccionado">Ningun objecto seleccionado.</string>
    <string name="error_examen_sin_clave">El examen seleccionado no tiene claves registradas.</string>
    <string name="error_formato_fecha_erroneo">El formato de la fecha es equivocado.</string>
    <string name="error_campos_vacios">Uno o mas de los campos requeridos no ha sido completado, o es incorrecto.</string>
    <string name="error_datos_invalido">Nombre o contraseña invalidos, pruebe cambiarlos.</string>
    <string name="error_cambio_contraseña">No se pudo realizar el cambo de contraseña, revise los datos ingresados.</string>
    <string name="error_contraseña_incorrecta">Ingreso mal la contraseña.</string>
    <string name="error_email_utilizado">El email ingresado fue escogido previamente, por favor elija otro.</string>
    <string name="error_datos_usuario">No se pudo localizar los datos del usuario, intente mas tarde.</string>
    <string name="error_eventos_no_generados">No se han generado eventos para la planificación</string>
    <string name="error_creacion_archivo">No se ha podido generar el archivo, intente de nuevo mas tarde.</string>
    <string name="error_archivo_no_encontrado">No se ha podido abrir el archivo, revise su directorio.</string>
    <string name="error_archivo_vacio">El archivo esta vacio de contenido.</string>
    <string name="identificador_usuario">ID del usuario: %1$s</string>
    <string name="email_identificador_usuario">Email del usuario: %1$s</string>
    <string name="formato_fecha">%1$d-%2$d-%3$d</string>
    <string name="idMateria">ID de la materia: %1$d</string>
    <string name="nota_mas_alta">Nota más alta: %1$f</string>
    <string name="nota_mas_baja">Nota más baja: %1$f</string>
    <string name="mejor_materia">Materia con mejor desempeño: %1$s</string>
    <string name="peor_materia">Materia con el peor desempeño: %1$s</string>
    <string name="mejor_tipo_materia">Tipo de materia con mejor desempeño: %1$s</string>
    <string name="peor_tipo_materia">Tipo de materia con peor desempeño: %1$s</string>
    <string name="examenes_cursados">Cantidad de exámenes cursados: %1$d</string>
    <string name="examenes_aprobados">Cantidad de exámenes aprobados: %1$d</string>
    <string name="examenes_desaprobados">Cantidad de exámenes desaprobados: %1$d</string>
    <string name="horas_estudio">Promedio de horas dedicadas al estudio por semana: %1$f</string>
    <string name="horas_cursado">Cantidad actual de horas dedicadas al cursado: %1$d</string>
    <string name="materias_cursadas">Cantidad de materias cursadas: %1$d</string>
    <string name="promedio_general">Promedio general: %1$f</string>
</resources>