<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.morbidoni.proyecto.ape.iu_inicio">
    <item
        android:id="@+id/menu_barra_agregar"
        android:orderInCategory="100"
        android:title="@string/menu_agregar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_barra_abrir"
        android:orderInCategory="100"
        android:title="@string/menu_abrir"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_barra_observar"
        android:orderInCategory="100"
        android:title="@string/menu_información"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_barra_modificar"
        android:orderInCategory="100"
        android:title="@string/menu_modificar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_barra_eliminar"
        android:orderInCategory="100"
        android:title="@string/menu_eliminar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_barra_ayuda"
        android:orderInCategory="100"
        android:title="@string/menu_ayuda"
        app:showAsAction="never" />
</menu>
