<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.morbidoni.proyecto.ape.iu_agenda">
    <item
        android:id="@+id/menu_agenda_agregar"
        android:orderInCategory="100"
        android:title="@string/menu_agregar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_agenda_modificar"
        android:orderInCategory="100"
        android:title="@string/menu_modificar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_agenda_eliminar"
        android:orderInCategory="100"
        android:title="@string/menu_eliminar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_agenda_ayuda"
        android:orderInCategory="100"
        android:title="@string/menu_ayuda"
        app:showAsAction="never" />
</menu>
