<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.morbidoni.proyecto.ape.iu_planificador">
    <item
        android:id="@+id/menu_planificador_inicio"
        android:orderInCategory="100"
        android:title="@string/menu_iniciar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_planificador_eliminar"
        android:orderInCategory="100"
        android:title="@string/menu_eliminar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_planificador_ayuda"
        android:orderInCategory="100"
        android:title="@string/menu_ayuda"
        app:showAsAction="never" />
</menu>