<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar_evento"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editNombreAgregarEvento"
                android:maxLength="50"
                android:hint="Nombre del evento"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textStyle="bold"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:id="@+id/agregarFechaEvento"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario_inicio"
                android:textStyle="bold"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/agregarEventoHoraIni"
                android:timePickerMode="spinner"
                android:paddingBottom="10dp"></TimePicker>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario_fin"
                android:textStyle="bold"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:id="@+id/agregarEventoHoraFin"
                android:paddingBottom="10dp"></TimePicker>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/editDescripcionEvento"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:paddingBottom="10dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxRecordatorio"
                android:text="@string/nota_recordatorio"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/aceptar"
                android:id="@+id/btnAgregarEvento"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>